src/test/ui/parser/attr-before-eof.rs
// compile-flags: -Z parse-only

#[derive(Debug)] //~ERROR expected item after attributes
